wrap scores table in element to set fixed height

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -176,6 +176,11 @@ select::-ms-expand {
   display: none;
 }
 
+.table-wrap {
+  height: 550px;
+  overflow: auto;
+}
+
 .scores {
   display: block;
   position: relative;
